[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs134-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[tool.hatch.build.targets.wheel]
packages = ["algorithms", "environments"]
